# Box-Agent

./: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: tests.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
box_agent/: __init__.py  agent.py  auth.py  build_runtime_cli.py  cli.py  cli_memory_proposal.py  cli_permissions.py  config.py  core.py  events.py  experts.py  logger.py  loop_guards.py  memory.py  memory_maintainer.py  retry.py
box_agent/acp/: __init__.py  action_hints.py  env_context.py  intent_classifier.py  project_context.py  stdio_compat.py
box_agent/config/: analysis_prompt.md  code_prompt.md  config-example.yaml  mcp-example.json  ppt_outline_prompt.md  system_prompt.md
box_agent/llm/: __init__.py  anthropic_client.py  base.py  debug_logging.py  error_messages.py  lightweight.py  llm_wrapper.py  openai_client.py  think_tag_splitter.py  token_meter.py
box_agent/schema/: schema.py
box_agent/skills/: README.md  _manifest.json
box_agent/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  image_generation_tool.py  jupyter_tool.py  mcp_loader.py  memory_tool.py  obsidian_tool.py  permissions.py  plan_tool.py  pptx_safety.py  runtime.py  safety.py  schedule_tool.py  setup.py  skill_loader.py  skill_tool.py  sub_agent_tool.py  (+2 more)
docs/: ACTION_HINT_PROTOCOL.md  ARTIFACT_PROTOCOL.md  CONTEXT_COMPRESSION.md  CONTEXT_COMPRESSION_CN.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  ENV_CONTEXT_PROTOCOL.md  FILESYSTEM_POLICY_PROTOCOL.md  INTEGRATION.md  MEMORY_INTEGRATION.md  MEMORY_MATCH_PROTOCOL.md  MEMORY_PROPOSAL_PROTOCOL.md  PRODUCTION_GUIDE.md  PRODUCTION_GUIDE_CN.md  RELEASE_STATE.md  THIRD_PARTY_API_COMPATIBILITY.md
examples/: 02_simple_agent.py  04_full_agent.py  05_provider_selection.py  06_tool_schema_demo.py  README.md  README_CN.md
pptx/: SKILL.md
scripts/: build_runtime.py  build_win_runtime.py  generate_skills_manifest.py  test_acp_streaming.py
tests/: conftest.py  test_acp.py  test_acp_auto_mode.py  test_acp_memory_proposal.py  test_action_hints.py  test_agent.py  test_agent_run_options.py  test_anthropic_event_order.py  test_auth.py  test_bash_tool.py  test_build_runtime.py  test_cli_config.py  test_cli_obsidian.py  test_cli_runtime.py  test_completion_gate.py  test_core.py  test_env_context.py  test_error_messages.py  test_experts.py  test_image_generation_tool.py  test_inject.py  test_intent_classifier.py  test_jupyter_runtime_python.py  test_jupyter_tool_pptx_guard.py  test_lightweight_prompt.py  test_lite_llm_routing.py  test_llm.py  test_llm_clients.py  test_llm_debug_logging.py  test_llm_timeout.py  test_mcp.py  test_mcp_lazy.py  test_memory.py  test_memory_context_entries.py  test_memory_extractor.py  test_memory_maintainer.py  test_memory_promotion.py  test_memory_tool.py  test_obsidian_tool.py  test_permission_negotiation.py  (+20 more)
(+219 files in other folders)
